# SBCBMC

./: .gitignore  CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/include/: config.h.in  daemon.h  pluginbase.h
agent/source/: daemon.cpp  main.cpp  pluginbase.cpp
client/: CMakeLists.txt  sbcbmc-client.qrc
client/include/: client.hpp
client/qml/: StatsView.qml  automotive.qml  basecomponent.qml  main.qml  qml.qrc
client/qml/components/: Voltage.qml
client/source/: client.cpp  main.cpp
plugins/: CMakeLists.txt
plugins/dcdc-usb-200/: CMakeLists.txt
plugins/dcdc-usb-200/include/: dcdc-usb-200.h
plugins/dcdc-usb-200/source/: dcdc-usb-200.cpp  dcdc_usb_200.rep
plugins/thermal/: CMakeLists.txt
plugins/thermal/include/: thermal.h
plugins/thermal/source/: thermal.cpp  thermal.rep
